--- a/Telco assignment.ipynb
+++ b/Telco assignment.ipynb
@@ -79,7 +79,7 @@
        "baseErrorDetails": null,
        "bindings": {},
        "collapsed": false,
-       "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"IyBQaWUgQ2hhcnRzCiMgQ291bnQgYnkgdGhlIENvbnRyYWN0CmNvbnRyYWN0X2NvdW50cyA9IGRmLmdyb3VwQnkoIkNvbnRyYWN0IikuY291bnQoKQoKZGlzcGxheShjb250cmFjdF9jb3VudHMp\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksViewba4eff1\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksViewba4eff1\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksViewba4eff1\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksViewba4eff1) SELECT `Contract`,SUM(`count`) `column_804d7c5b33` FROM q GROUP BY `Contract`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksViewba4eff1\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
+       "command": "%python\n__backend_agg_display_orig = display\n__backend_agg_dfs = []\ndef __backend_agg_display_new(df):\n    __backend_agg_df_modules = [\"pandas.core.frame\", \"databricks.koalas.frame\", \"pyspark.sql.dataframe\", \"pyspark.pandas.frame\", \"pyspark.sql.connect.dataframe\"]\n    if (type(df).__module__ in __backend_agg_df_modules and type(df).__name__ == 'DataFrame') or isinstance(df, list):\n        __backend_agg_dfs.append(df)\n\ndisplay = __backend_agg_display_new\n\ndef __backend_agg_user_code_fn():\n    import base64\n    exec(base64.standard_b64decode(\"IyBQaWUgQ2hhcnRzCiMgQ291bnQgYnkgdGhlIENvbnRyYWN0CmNvbnRyYWN0X2NvdW50cyA9IGRmLmdyb3VwQnkoIkNvbnRyYWN0IikuY291bnQoKQoKZGlzcGxheShjb250cmFjdF9jb3VudHMp\").decode())\n\ntry:\n    # run user code\n    __backend_agg_user_code_fn()\n\n    #reset display function\n    display = __backend_agg_display_orig\n\n    if len(__backend_agg_dfs) > 0:\n        # create a temp view\n        if type(__backend_agg_dfs[0]).__module__ == \"databricks.koalas.frame\":\n            # koalas dataframe\n            __backend_agg_dfs[0].to_spark().createOrReplaceTempView(\"DatabricksView9d0b672\")\n        elif type(__backend_agg_dfs[0]).__module__ == \"pandas.core.frame\" or isinstance(__backend_agg_dfs[0], list):\n            # pandas dataframe\n            spark.createDataFrame(__backend_agg_dfs[0]).createOrReplaceTempView(\"DatabricksView9d0b672\")\n        else:\n            __backend_agg_dfs[0].createOrReplaceTempView(\"DatabricksView9d0b672\")\n        #run backend agg\n        display(spark.sql(\"\"\"WITH q AS (select * from DatabricksView9d0b672) SELECT `Contract`,SUM(`count`) `column_804d7c5b33` FROM q GROUP BY `Contract`\"\"\"))\n    else:\n        displayHTML(\"dataframe no longer exists. If you're using dataframe.display(), use display(dataframe) instead.\")\n\n\nfinally:\n    spark.sql(\"drop view if exists DatabricksView9d0b672\")\n    display = __backend_agg_display_orig\n    del __backend_agg_display_new\n    del __backend_agg_display_orig\n    del __backend_agg_dfs\n    del __backend_agg_user_code_fn\n\n",
        "commandTitle": "Visualization 1",
        "commandType": "auto",
        "commandVersion": 0,
@@ -188,7 +188,10 @@
        "latestUser": "a user",
        "latestUserId": null,
        "listResultMetadata": null,
-       "metadata": {},
+       "metadata": {
+        "byteLimit": 2048000,
+        "rowLimit": 10000
+       },
        "nuid": "ee20af3e-d7d0-4dbb-8113-eff1f19848f7",
        "origId": 0,
        "parentHierarchy": [],
@@ -270,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "# Get the number of customers that have Multiple Lines. Show the result as value of a single variable\n",
+    "# Get the number of customers that have Multiple Lines. Result = Single Variable\n",
     "from pyspark.sql.functions import col\n",
     "num_multiple_lines = df.filter(col(\"MultipleLines\") == \"Yes\").count()\n",
     "\n",
@@ -297,7 +300,7 @@
    "source": [
     "from pyspark.sql.functions import min, max\n",
     "\n",
-    "# min, max claculate\n",
+    "# Calculate min and max \n",
     "tenure_stats = df.select(min(\"tenure\"), max(\"tenure\")).collect()\n",
     "\n",
     "min_tenure = tenure_stats[0][0]\n",
@@ -325,7 +328,6 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import avg\n",
-    "\n",
     "gender_charges = df.groupBy(\"gender\").agg(avg(\"MonthlyCharges\").alias(\"AvgMonthlyCharges\"))\n",
     "display(gender_charges)"
    ]
@@ -350,10 +352,10 @@
    "source": [
     "avg_yearly = df.filter(col(\"Contract\") == \"One year\").select(avg(\"MonthlyCharges\")).collect()[0][0]\n",
     "\n",
-    "# 2. Others avg\n",
+    "# Avg of Others\n",
     "avg_others = df.filter(col(\"Contract\") != \"One year\").select(avg(\"MonthlyCharges\")).collect()[0][0]\n",
     "\n",
-    "# 3. bool \n",
+    "# bool \n",
     "is_yearly_higher = avg_yearly > avg_others\n",
     "\n",
     "print(f\"One year average: {avg_yearly}\")\n",
